--- a/src/views/reject.hbs
+++ b/src/views/reject.hbs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SmartiFi - Welcome</title>
+    <title>SmartiFi - Application Update</title>
 </head>
 <body>
 <div class="container">
@@ -11,13 +11,13 @@
         <h3>Dear {{FirstName}} {{LastName}},</h3>
     </div>
     <br>
-    <h4>Thank you for joining us</h4>
-    <h4>Please click the link below to verify your email: </h4>
+    <p>Thank you for taking the time to fill out your application with SmartiFi.</p>
+    <p>The loan application you have applied for was rejected by the lender.</p>
+    <p>Thank you for your time,</p>
+    <br>
+    <p>
+        SmartiFi Team
+    </p>
 </div>
-<a href="{{linkSend}}">Click Here!</a>
-<br>
-<p>
-    SmartiFi Team
-</p>
 </body>
 </html>
