--- a/src/app/student-dashboard/student-dashboard.component.html
+++ b/src/app/student-dashboard/student-dashboard.component.html
@@ -5,7 +5,7 @@
     Welcome {{email}},
   </h2>
 </div>
-<div class="container mt-4">
+<div class="container mt-3">
   <div class="row">
     <div class="col-md-3">
       <div style="height: 10rem;" class="card">
@@ -57,17 +57,43 @@
   </div>
 </div>
 <div *ngIf="LoanStatus==='APPROVED'" class="container">
-  <p><b>Next Payment Due Date:</b> {{NextPayment}}</p>
-  <p><b>Amount Due: </b>{{AmountDue | currency}}</p>
+  <p><b>Pay Off Date:</b> {{PayoffDate}}</p>
   <!-- <p><b>Payment Status:</b> {{isPaid}}</p> -->
   <p class="lead"><a href="https://commerce.cashnet.com/cashneti/selfserve/BrowseCatalog.aspx" target="_blank"><button class="btn btn-primary">Pay Now</button></a></p>
 </div>
+
 <div class="container gap">
   <h3>Learn More</h3>
-</div>
-<div class="container">
-  <div class="col-md-4">
-    <p>Coming Soon</p>
+  <div class="row">
+  <div class="col-md-4 mt-3">
+    <div class="card loan-background hoverable" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title text-white">ASMSU Student Loan</h5>
+        <p class="card-text">...</p>
+        <button type="button" mdbBtn color="primary" class="relative waves-light" (click)="basicModal.show()" mdbWavesEffect>More Info</button>
+      </div>
+    </div>
+  </div>
+    
+
+    <div mdbModal #basicModal="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myBasicModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close pull-right" aria-label="Close" (click)="basicModal.hide()">
+              <span aria-hidden="true">×</span>
+            </button>
+            <h4 class="modal-title w-100" id="myModalLabel">ASMSU Student Loan</h4>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" mdbBtn color="secondary" class="waves-light" aria-label="Close" (click)="basicModal.hide()" mdbWavesEffect>Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 </section>
