--- a/src/app/lender-dashboard/lender-dashboard/lender-dashboard.component.html
+++ b/src/app/lender-dashboard/lender-dashboard/lender-dashboard.component.html
@@ -41,7 +41,7 @@
     <div class="col">
       <div class="card">
         <div class="card-header">New Applications Today</div>
-        <div class="card-body">None</div>
+        <div class="card-body">{{totalAppsToday}}</div>
       </div>
     </div>
 
@@ -85,11 +85,11 @@
           
           <div class="col-lg-6 col-md-6">
           <div class="card">
-            <div class="card-header">Loan Applications - Past Month</div>
+            <div class="card-header">Loan Applications - Past Year</div>
             <div style="display: block">
               <canvas mdbChart
                   [chartType]="chartType"
-                  [datasets]="chartDatasets"
+                  [(datasets)]="chartDatasets"
                   [labels]="chartLabels"
                   [colors]="chartColors"
                   [options]="chartOptions"
